--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ HW1/tempCodeRunnerFile.m
 HW4/piano.wav
 HW4/prof.wav
 HW4/violin.wav
+HW4/cello.wav
+HW4/modified_sound_clip.wav
+HW4/NoPiano.wav
+HW4/prof_female.wav
